# mcp-proc

./: .env  .gitignore  README.md  main.py  pyproject.toml
server/: client.py  weather.json  weather.py
