[project]
name = "mcpcrachcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-ai-generativelanguage>=0.7,<0.8",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai==2.1.12",
    "mcp-use>=1.3.10",
    "mcp[cli]>=1.14.0",
    "requests>=2.32.5",
]
